# flash-msa

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
benchmarks/: correctness_sweep.py  correctness_sweep_warmup.py  sweep_training_kernels.py
flash_msa/: __init__.py  _flash_attn_compat.py  flash_msa.py  msa_backward_cutedsl.py  msa_forward_cutedsl.py  msa_select_cutedsl.py  reverse_index_cuda.py  sparse_flash_varlen.py
flash_msa/csrc/: reverse_index_cuda.cu
flash_msa/tests/: __init__.py  testing_docmask_model.py  testing_docmask_model_warmup.py  testing_model.py  testing_model_warmup.py
flash_msa/warmup/: __init__.py  flash_msa_warmup.py  msa_backward_cutedsl_warmup.py  msa_forward_cutedsl_warmup.py
tests/: test_docmask_eager_match.py  test_docmask_warmup_eager_match.py  test_eager_match.py  test_warmup_eager_match.py
