[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flash-msa"
version = "0.1.1"
description = "CuTeDSL Flash-MSA training kernels for sparse attention."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Flash-MSA contributors" }
]
keywords = ["attention", "cuda", "cutedsl", "pytorch", "sparse-attention"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "cuda-python",
  "nvidia-cutlass-dsl[cu13]",
  "packaging",
  "torch==2.12.0",
  "ninja",
]

# Some form of flash is needed for varlen flash in the forward kernels
#   but prolly better to defer to user to install the version that is supported in their env
#   to avoid triggering silent lengthy flash builds from scratch
[project.optional-dependencies]
fa4 = [
  "flash-attn-4[cu13]",
]
dev = [
  "numpy",
  "psutil",
  "pytest",
  "wheel",
]

[tool.setuptools.packages.find]
include = ["flash_msa*"]

[tool.setuptools.package-data]
flash_msa = ["csrc/*.cu"]
